--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
         };
 
         // Google Apps Script 웹 앱 URL (2단계에서 복사한 URL로 변경하세요)
-        const APPS_SCRIPT_URL = 'https://docs.google.com/spreadsheets/d/17E9JFksbBiSVn3kE0GAbH_8YD-Ya0UYmEch0zdMsQxI/edit?gid=0#gid=0';
+        const APPS_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbwrjBpyeqcMNw42Tor1KOPh-CNn_ZH619q70gnP9IrwVOXRAUP-d346adCRjBHiuw3x/exec';
 
         const difficulties = {
             easy: { mines: 10, name: '초급' },
