--- a/index.html
+++ b/index.html
@@ -282,29 +282,24 @@
 
         // 스프레드시트에 데이터 저장 함수
         async function saveToSpreadsheet(name, difficulty, time) {
-            try {
-                const response = await fetch(APPS_SCRIPT_URL, {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json',
-                    },
-                    body: JSON.stringify({
-                        name: name,
-                        difficulty: difficulty,
-                        time: time
-                    })
-                });
-                
-                const result = await response.json();
-                if (result.success) {
-                    console.log('데이터가 성공적으로 저장되었습니다.');
-                } else {
-                    console.error('저장 실패:', result.message);
-                }
-            } catch (error) {
-                console.error('스프레드시트 저장 오류:', error);
-            }
-        }
+    try {
+        await fetch(APPS_SCRIPT_URL, {
+            method: 'POST',
+            mode: 'no-cors', // 👈 이 줄 추가!
+            headers: {
+                'Content-Type': 'application/json',
+            },
+            body: JSON.stringify({
+                name: name,
+                difficulty: difficulty,
+                time: time
+            })
+        });
+        console.log('스프레드시트에 결과 전송 완료!');
+    } catch (error) {
+        console.error('전송 실패:', error);
+    }
+}
 
         function submitName() {
             const nameInput = document.getElementById('playerName');
